--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,600&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn {
+    @apply w-full rounded-3xl border py-3;
+  }
+
+  .btn-red {
+    @apply border-[#B94825] bg-[#C73B0E] text-[#E7AB91];
+  }
+}
